[package]
name = "prime-iterator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
#debug = 1
#[rust]
#debuginfo-level = 1

[dependencies]
itertools = "0.10.5"
bitvec = "1"
